# DeterministicESPAsyncWebServer

./: .bumpversion.cfg  .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .prettierignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  cspell.json  idf_component.yml  keywords.txt  library.json  library.properties  package-lock.json  package.json  platformio.ini  pyproject.toml  sonar-project.properties
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: arduino-build.yml  changelog.yml  clang-format.yml  codeql.yml  docs-sphinx.yml  docs.yml  esp32-build.yml  feature-tables.yml  interop-harness.yml  markdown-format.yml  pentest.yml  release.yml  sonarcloud.yml  spellcheck.yml  test-report.yml  web-assets.yml
benchmarks/: README.md
benchmarks/detws/: platformio.ini
benchmarks/eaws/: platformio.ini
docs/: ARCHITECTURE.md  AUDIT.md  BUGS.md  CHANGELOG.md  CODEQL.md  COVERAGE_GAP.md  DTLS.md  Doxyfile  EXAMPLES.md  FAVICONS.md  FEATURES.md  FEATURE_PERFORMANCE.md  FOOTPRINTS.md  HARDWARE_HOOKUP.md  KNOWN_LIMITATIONS.md  MIGRATION-7.0.md  MIGRATION.md  PENTEST.md  README.md  RFC.md  ROADMAP.md  SECURE_BOOT.md  SECURITY.md  SONARQUBE.md  SRCBANNED.md  SSH.md  STANDARDS.md  TEST_DOCUMENTATION.md  TEST_REPORT.md  THEMES.md  TODO.md  TUNING.md  cliff.toml  configurator.html  custom.css  custom_doxygen.css  feature_ranges.json  footer.html  footprints.json  header.html
docs/diagrams/: api_flow.mmd  api_flow_detail.mmd  flag_deps.dark.dot  flag_deps.light.dot  flag_deps.mmd
docs/learn/: README.md  languages.md  osi-model.md  tcp-ip.md
docs/reference/: README.md
docs/sphinx/: api.rst  architecture.md  conf.py  index.md  languages.md  osi-model.md  requirements.txt  tcp-ip.md
examples/basic/: basic.ino
examples/esp-idf/minimal/main/: CMakeLists.txt  main.cpp
pentesting/: README.md  detws_pentest.py  dws_pentest.py
perf/: README.md  bench_bacnet.cpp  bench_coap.cpp  bench_datastore.cpp  bench_deflate.cpp  bench_dnp3.cpp  bench_dns.cpp  bench_enip.cpp  bench_ftp.cpp  bench_goose.cpp  bench_iec60870.cpp  bench_jwt.cpp  bench_mms.cpp  bench_modbus.cpp  bench_mqtt.cpp  bench_nats.cpp  bench_ntp.cpp  bench_nts.cpp  bench_opcua.cpp  bench_profinet.cpp  bench_redis.cpp  bench_reqpath.cpp  bench_s7comm.cpp  bench_smtp.cpp  bench_snmp.cpp  bench_sse.cpp  bench_ssh.cpp  bench_statsd.cpp  bench_stomp.cpp  bench_syslog.cpp  bench_webdav.cpp  common.ini  host_microbench.cpp
reverse_engineering/: README.md  dpa_cpa_engine.py  dpa_cpa_network_engine.py  hardening_demo.py  main.cpp  platformio.ini  spa_engine.py  template_attack_engine.py  timing_engine.py
src/: DETWS_HTML.h  DetJson.h  DetWebServerConfig.h  DeterministicESPAsyncWebServer.cpp  DeterministicESPAsyncWebServer.h  ServerConfig.h  dwserver.cpp  dwserver.h
test/: README.md  TEST_REPORT.md  TEST_REPORTS.md  compile_commands.json  coverage.xml  dep_graph.json  gen_test_envs.py  gen_test_readme.py  merge_report.py  report_stable.py  run_tests.ps1  run_tests.sh  select_envs.py  test_matrix.json
tools/: check_owned_context.py  curate_crypto_vectors.py  enum_to_class.py  gen_crypto_vectors.py  gen_dep_graph.py  gen_ed25519_comb.py  gen_mlkem_kat.py  gen_ssh_host_key.py  include_footprint.py  pack_favicons.sh  pid_tune.py  render_diagrams.sh  render_theme_previews.cjs  test_enum_to_class.py
(+2582 files in other folders)
